【LearnVulkan】规范项目路径。

--- a/LearnVulkan/LearnVulkan.vcxproj.filters
+++ b/LearnVulkan/LearnVulkan.vcxproj.filters
@@ -13,10 +13,24 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Source Files\HelloTriangle">
+      <UniqueIdentifier>{bfe2d036-fc23-4d3d-9e12-779f69189186}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\EnvironmentSet">
+      <UniqueIdentifier>{c0838dd0-8980-475e-a347-d61525de340f}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp">
-      <Filter>Source Files</Filter>
+    <ClCompile Include="HelloTriangleApplication.cpp">
+      <Filter>Source Files\HelloTriangle</Filter>
     </ClCompile>
+    <ClCompile Include="main.cpp">
+      <Filter>Source Files\EnvironmentSet</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="startup.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
