--- a/LearnVulkan/LearnVulkan.vcxproj
+++ b/LearnVulkan/LearnVulkan.vcxproj
@@ -145,6 +145,11 @@
   <ItemGroup>
     <ClInclude Include="startup.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="compile.bat" />
+    <None Include="shader.frag" />
+    <None Include="shader.vert" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
